2013-12-04  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed agent filter
	when put an agent that not exist. Incident #430

2013-12-03  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php: Fixed
	snmp v3 credentials missing in network components editor
	merged from trunk

2013-11-11  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/OpenLayers/OpenLayers.js: Fix layer
	order error that broke the zoom in google maps on GIS for 
	incident #370

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Added description
	to module massive edition for incident #148.
	Merged from 5.0 (trunk)

2013-11-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fixed function that
	returns the user groups in tree way. It was broken
	when the user has acls over a group but not in his
	father. Incident: #342

2013-10-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: fixed the delete the nodes in the
	networkmap enterprise.

2013-10-28  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ar.mo
	  include/languages/ar.po
 	  include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/el.mo
	  include/languages/el.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/it.po
	  include/languages/it.mo
	  include/languages/ja.po
	  include/languages/ja.mo
	  include/languages/nl.po
	  include/languages/nl.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/pt.po
	  include/languages/pt.mo
	  include/languages/pt_BR.po
	  include/languages/pt_BR.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/sk.po
	  include/languages/sk.mo