@@ -1,3 +1,8 @@
+2013-12-04 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: fixed the function "returnData" for
+	html entities.
+
 2013-12-04  Sergio Martin <sergio.martin@artica.es>
 
 	* operation/events/events_list.php: Fixed agent filter
